NTComponents/Layout/TnTLayout.razor.scss
@use '../Styles/_Variables/_measurements.scss' as measurements;

.tnt-layout {
    display: grid;
    height: 100vh;
    width: 100vw;
    grid-template-columns: 1fr;
    grid-template-rows: 100%;

    .tnt-layout {
        width: 100%;
        height: 100%;
    }

    &:has(> .tnt-side-nav):has(> .tnt-footer):has(> .tnt-header) {
        grid-template-areas: "sidenav header" "sidenav body" "sidenav footer";
    }

    &:has(> .tnt-header):has(> .tnt-footer):not(:has(> .tnt-side-nav)) {
        grid-template-areas: "header" "body" "footer";
    }

    &:has(> .tnt-header):not(:has(> .tnt-footer)):not(:has(> .tnt-side-nav)) {
        grid-template-areas: "header" "body";
    }

    &:has(> .tnt-footer):not(:has(> .tnt-header)):not(:has(> .tnt-side-nav)) {
        grid-template-areas: "body" "footer";
    }

    &:has(> .tnt-side-nav):not(:has(> .tnt-header)):not(:has(> .tnt-footer)) {
        grid-template-areas: "sidenav body";
    }

    &:has(> .tnt-header):has(> .tnt-side-nav):not(:has(> .tnt-footer)) {
        grid-template-areas: "sidenav header" "sidenav body";
    }

    &:not(:has(> .tnt-header)):has(> .tnt-side-nav):has(> .tnt-footer) {
        grid-template-areas: "sidenav body" "sidenav footer";
    }

    &:has(> .tnt-side-nav) {
        grid-template-columns: measurements.$tnt-side-nav-width 1fr;
    }

    &:has(> .tnt-header):not(:has(> .tnt-footer)) {
        grid-template-rows: measurements.$tnt-header-height 1fr;
    }

    &:not(:has(> .tnt-header)):has(> .tnt-footer) {
        grid-template-rows: 1fr measurements.$tnt-footer-height;
    }

    &:has(> .tnt-header):has(> .tnt-footer) {
        grid-template-rows: measurements.$tnt-header-height 1fr measurements.$tnt-footer-height;
    }

    transition: 250ms ease-in-out;

    ::deep * {
        scrollbar-gutter: stable both-edges;
        scrollbar-width: thin;
        scrollbar-color: color-mix(in srgb, var(--tnt-color-outline) 50%, transparent) transparent;
    }

    ::deep *::-webkit-scrollbar {
        width: 10px;
        height: 10px;
    }

    ::deep *::-webkit-scrollbar-track {
        background: transparent;
    }

    ::deep *::-webkit-scrollbar-thumb {
        background: color-mix(in srgb, var(--tnt-color-outline) 50%, transparent);
        border-radius: 9999px;
        border: 2px solid transparent;
        background-clip: content-box;
    }


    @media #{measurements.$medium-and-up} {
        &:not(:has(> .tnt-side-nav.tnt-side-nav-hide-on-large)) {
            &:has(> .tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
                grid-template-columns: 0 1fr;

                ::deep .tnt-side-nav {
                    transform: translate(-105%);
                }
            }
        }

        &:has(> .tnt-side-nav.tnt-side-nav-hide-on-large) {
            grid-template-columns: 0 1fr;

            ::deep > .tnt-side-nav {
                transform: translate(-105%);
            }

            &:has(> .tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {
                grid-template-columns: measurements.$tnt-side-nav-width 1fr;

                ::deep > .tnt-side-nav {
                    transform: translate(0);
                }
            }
        }
    }

    @media #{measurements.$small-and-down} {
        &:has(> .tnt-side-nav) {
            grid-template-columns: 0 1fr !important;

            ::deep > .tnt-side-nav {
                transform: translateX(-105%);
            }

            &:has(> .tnt-side-nav-toggle-indicator .tnt-toggle-indicator.tnt-toggle) {

                ::deep > .tnt-header {
                    transform: translateX(calc(measurements.$tnt-side-nav-width - 16px));
                }

                ::deep > .tnt-side-nav {
                    transform: translate(0%);
                }
            }
        }
    }
}

